<resources>
    <string name="app_name">BetterReader</string>

    <string name="networkError">Please reconnect to the internet and try again</string>
    <string name="collapse_label">Collapse</string>
    <string name="expand_label">Expand</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="manga_image">Manga Image</string>
    <string name="action_search">Search</string>
    <string name="popular">Most Popular</string>
    <string name="hot">Hot</string>
    <string name="genre">Genre</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="favorited">Favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="loading_next_chapter">Loading next chapter</string>
    <string name="loading_previous_chapter">Loading previous chapter</string>
    <string name="zero_percent">0%</string>
    <string name="loading_mangas">Loading mangas..</string>
</resources>
